fixed overlap issue

--- a/about.css
+++ b/about.css
@@ -72,7 +72,7 @@ header ul li a.active {
 
 .about {
     width: 100%;
-    height: 50vh;
+    height: 55vh;
     background-color: #1c0522;
     position: relative;
     justify-content: center;
@@ -104,11 +104,27 @@ header ul li a.active {
     width: 100%;
     height: 100vh;
     background-color: #1c0522;
+    position: relative;
+    display: flex;
+    padding-left: 2%;
 }
 
 .missiondescription {
-    width: 50%;
-    height: 60vh;
-    background-color: #fff;
+    width: 65%;
+    height: 65vh;
+    background-color: #1c0522;
+    box-shadow: 0 0 30px #fff;
+}
 
+.missiondescription h2 {
+    color: #fff;
+    font-size: 3vw;
+    padding: 20px 30px;
+}
+
+.missiondescription p {
+    color: #fff;
+    font-size: 1.5vw;
+    padding-left: 7%;
+    padding-right: 5%;
 }
