--- a/members.css
+++ b/members.css
@@ -11,6 +11,7 @@
 body {
     min-height: 100vh;
     overflow-x: hidden;
+    position: absolute;
 }
 
 .background {
@@ -64,7 +65,7 @@ header ul li a.active {
     width: 100%;
     top: 0;
     left: 0;
-    height: 90vh;
+    height: 600px;
     position: relative;
     /* display: flex; */
     padding: 0px;
@@ -74,7 +75,7 @@ header ul li a.active {
 
 .coachestitle {
     width: 100%;
-    height: 10vh;
+    height: 100px;
     position: absolute;
 }
 
@@ -88,8 +89,8 @@ header ul li a.active {
 .coaches {
     width: 100%;
     height: 50vh;
-    top: 25vh;
-    position: relative;
+    top: 150px;
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -171,9 +172,9 @@ header ul li a.active {
 
 .sec2 {
     width: 100%;
-    top: 40vh;
+    top: 0;
     left: 0;
-    height: 75vh;
+    height: 500px;
     position: relative;
     display: flex;
     padding: 0px;
@@ -184,8 +185,8 @@ header ul li a.active {
 .coaches2 {
     width: 100%;
     height: 50vh;
-    top: 5vh;
-    left: 5vh;
+    top: 2vw;
+    left: 2.5%;
     position: relative;
     display: flex;
     justify-content: center;
@@ -247,9 +248,9 @@ header ul li a.active {
 }
 
 .athletes1 {
-    top: 75vh;
+    top: 0;
     left: 0;
-    height: 95vh;
+    height: 650px;
     position: relative;
     display: flex;
     padding: 0;
@@ -258,7 +259,7 @@ header ul li a.active {
 
 .athletestitle {
     color: #fff;
-    height: 10vh;
+    height: 100px;
     position: absolute;
 }
 
@@ -271,8 +272,8 @@ header ul li a.active {
 
 .athletesrow1 {
     width: 100%;
-    height: 50vh;
-    top: 20vh;
+    height: 300px;
+    top: 150px;
     position: relative;
     display: flex;
     justify-content: center;
@@ -354,9 +355,9 @@ header ul li a.active {
 }
 
 .athletes2 {
-    top: 75vh;
+    top: 0;
     left: 0;
-    height: 75vh;
+    height: 500px;
     position: relative;
     display: flex;
     padding: 0;
@@ -366,6 +367,7 @@ header ul li a.active {
 .athletesrow2 {
     width: 100%;
     height: 50vh;
+    top: 3vw;
     position: relative;
     display: flex;
     justify-content: center;
@@ -449,9 +451,9 @@ header ul li a.active {
 }
 
 .athletes3 {
-    top: 72vh;
+    top: 0;
     left: 0;
-    height: 80vh;
+    height: 600px;
     position: relative;
     display: flex;
     padding: 0;
@@ -460,6 +462,7 @@ header ul li a.active {
 
 .athletesrow3 {
     width: 100%;
+    top: 3vw;
     height: 50vh;
     position: relative;
     display: flex;
